Fixed compact mode options not showing when using multiple toolbars

--- a/src/browser/themes/shared/preferences/zen-preferences.css
+++ b/src/browser/themes/shared/preferences/zen-preferences.css
@@ -200,7 +200,7 @@ groupbox h2 {
   }
 }
 
-@media (-moz-bool-pref: 'zen.view.sidebar-expanded') {
+@media (-moz-bool-pref: 'zen.view.use-single-toolbar') {
   #zen-compact-mode-styles-form {
     display: none;
   }
